# quant-prng-bench

./: .gitignore  BenchmarkReport  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: bench.cpp.909231BE98063EE6.idx  bench.hpp.ED8B51A2F03752BF.idx  lcg.cpp.277EF7F83BF1D1AD.idx  lcg.hpp.D8F8BF34DF09F3DD.idx  test_prng.cpp.EC5BA41C07151CFB.idx  timer.cpp.99802FBF8C9D8512.idx  timer.hpp.E6CC20A62C945B44.idx
benchmarks/: CMakeLists.txt
benchmarks/include/benchmarks/: bench.hpp
benchmarks/src/: bench.cpp
libbench/: CMakeLists.txt
libbench/include/: BenchReport.h  BenchStatics.h  timer.h
libbench/include/libbench/: timer.hpp
libbench/src/: BenchReport.cpp  BenchStatics.cpp  timer.cpp
libprng/: CMakeLists.txt
libprng/include/: lcg.hpp
libprng/include/libprng/: lcg.hpp
libprng/src/: lcg.cpp
libseed/: CMakeLists.txt
libseed/include/: SeedGenerator.h
libseed/src/: SeedGenerator.cpp
notes/: SeederNotes.txt  SeederREADME.md
test/: CMakeLists.txt  test_prng.cpp
